# module-template

./: .gitignore  LICENSE  README.md  build  build.bat  check_debug.py  gen_docs  gen_docs.bat  host_docs  host_docs.bat  init_template.py  pyproject.toml  requirements.txt
newmodule/: __init__.py  globals.py  py.typed
