[project]
name = "{MODULE}"
version = "0.0.1"
authors = [
  { name="{AUTHOR_NAME}", email="{AUTHOR_EMAIL}" },
]
description = "A new module."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
  "pdoc3",
  "black",
  "build",
  "twine",
  "isort",
  "mypy",
  "radon",
  "no_implicit_optional",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [project.scripts]
# {MODULE} = "{MODULE}.__main__:main"

[tool.setuptools.packages.find]
include = ["{MODULE}", "{MODULE}.*"]
exclude = ["tests", "tests.*", "local", "local.*", "env", "env.*"]
